--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
 <body onload="inicioAplicacion()">
     <h1>Fotos de Contactos</h1>
     <button id="botonSeleccionarContacto" disabled="true" onClick="seleccionarContacto()">Seleccionar contacto</button>
+    <button id="botonCambiarFoto" disabled="true" onClick="cambiarFoto()">Cambiar foto</button>
     <img id="fotoContacto"></img>
 </body>
 
